--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@sendgrid/mail": "^8.1.4",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.18.2",
     "geist": "^1.3.1",
     "next": "^15.2.1",
